--- a/pom.xml
+++ b/pom.xml
@@ -61,9 +61,12 @@
 			<artifactId>all-themes</artifactId>
 			<version>1.0.8</version>
 		</dependency>
+		<dependency>
+			<groupId>org.omnifaces</groupId>
+			<artifactId>omnifaces</artifactId>
+			<version>1.11</version>
+		</dependency>
+
 	</dependencies>
-
-
-
 
 </project>
